--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -43,7 +43,7 @@ I_INSTRUCTIONS=-I$(PTA_GAME_OBJECTS)
 TARGET=PA_AMB_TOMAQUET_DEMO.out
 
 CC=g++
-COMPILER_FLAGS=-Wall -c -g
+COMPILER_FLAGS=-Wall -c -g -O0
 LINKER_FLAGS=-lSDL2 -lSDL2_image
 
 
