scene structure added

--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -1,16 +1,17 @@
 #DEMO MAKE FILE
 PA_AMB_TOMAQUET_FOLDER=..
 PAT_OBJECT_DIRECTORY=$(PA_AMB_TOMAQUET_FOLDER)/FileObjects
-PAT_OBJECTS_USED=Screen.o AnimatedStaticObject.o AnimatedKineticObject.o AnimationManager.o Controller.o Vector2D.o GraphicStaticObject.o
+PAT_OBJECTS_USED=Screen.o AnimatedStaticObject.o AnimatedKineticObject.o AnimationManager.o Controller.o Vector2D.o GraphicStaticObject.o Scene.o
 PAT_OBJECTS=$(patsubst %.o,$(PAT_OBJECT_DIRECTORY)/%.o, $(PAT_OBJECTS_USED))
 
-#PA AMB TOMÀTEQT FOLDERS
-PTA_GRAPHICS=$(PA_AMB_TOMAQUET_FOLDER)/Graphics
+#PA AMB TOMÀTEQT FOLDERS PTA_GRAPHICS=$(PA_AMB_TOMAQUET_FOLDER)/Graphics
 PTA_INPUT=$(PA_AMB_TOMAQUET_FOLDER)/Input
 PTA_MATH=$(PA_AMB_TOMAQUET_FOLDER)/Math
 PTA_UTILS=$(PA_AMB_TOMAQUET_FOLDER)/Utils
 PTA_GAME=$(PA_AMB_TOMAQUET_FOLDER)/Game
 PTA_GAME_OBJECTS=$(PA_AMB_TOMAQUET_FOLDER)/GameObjects
+PTA_SCENE=$(PA_AMB_TOMAQUET_FOLDER)/Scene
+PTA_GRAPHICS=$(PA_AMB_TOMAQUET_FOLDER)/Graphics
 
 #DEMO FOLDERS
 MAIN=./Main
@@ -22,9 +23,10 @@ TEST2=$(GAME_OBJECTS)/Test2
 PLAYER=$(GAME_OBJECTS)/Player
 INSTRUCTIONS=$(GAME_OBJECTS)/Instructions
 INPUT=./Input
+SCENE=./Scene
 
 #DEMO OBJECTS
-DEMO_OBJECTS_USED=Main.o Game.o Test1.o Test1AnimationManager.o Test2.o Test2AnimationManager.o Controller.o Player.o Instructions.o
+DEMO_OBJECTS_USED=Main.o Game.o Test1.o Test1AnimationManager.o Test2.o Test2AnimationManager.o Controller.o Player.o Instructions.o DemoScene.o
 DEMO_OBJECTS=$(patsubst %.o,$(OBJECT_FILES)/%.o, $(DEMO_OBJECTS_USED))
 
 
@@ -32,13 +34,14 @@ OBJECTS=$(PAT_OBJECTS) $(DEMO_OBJECTS)
 
 
 #INCLUDE FOR OBJECTS
-I_MAIN=-I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_MATH) -I$(PTA_UTILS) -I$(PTA_GAME) -I$(PTA_GAME_OBJECTS)
-I_GAME=-I$(PTA_GAME) -I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_UTILS) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(TEST1)  -I$(TEST2) -I$(PLAYER) -I$(INSTRUCTIONS)
+I_MAIN=-I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_MATH) -I$(PTA_UTILS) -I$(PTA_GAME) -I$(PTA_GAME_OBJECTS) -I$(PTA_SCENE) -I$(SCENE)
+I_GAME=-I$(PTA_GAME) -I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_UTILS) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(TEST1)  -I$(TEST2) -I$(PLAYER) -I$(INSTRUCTIONS) -I$(PTA_SCENE) -I$(SCENE)
 I_TEST1=-I$(TEST1) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 I_TEST2=-I$(TEST2) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PTA_MATH)
 I_PLAYER=-I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 I_CONTROLLER=-I$(PTA_INPUT) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 I_INSTRUCTIONS=-I$(PTA_GAME_OBJECTS)
+I_SCENE=-I$(PTA_SCENE) -I$(SCENE) -I$(INPUT) -I$(PTA_INPUT) -I$(PTA_GAME_OBJECTS) -I$(PLAYER) -I$(TEST1) -I$(TEST2) -I$(INSTRUCTIONS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 
 TARGET=PA_AMB_TOMAQUET_DEMO.out
 
@@ -82,15 +85,19 @@ $(OBJECT_FILES)/Player.o: $(PLAYER)/Player.cpp $(PLAYER)/Player.h
 $(OBJECT_FILES)/Instructions.o: $(INSTRUCTIONS)/Instructions.h
 	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_INSTRUCTIONS) -x c++ $< -o $@
 
+$(OBJECT_FILES)/DemoScene.o: $(SCENE)/DemoScene.cpp $(SCENE)/DemoScene.h
+	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_SCENE) $< -o $@
+
+
 
 .PHONY: clean c_all c_pa_amb_tomaquet pa_amb_tomaquet
 
 clean:
 	rm $(TARGET) $(OBJECT_FILES)/*.o
 
-
 c_pa_amb_tomaquet:
 	cd $(PA_AMB_TOMAQUET_FOLDER) && $(MAKE) clean
+
 c_all:
 	cd $(PA_AMB_TOMAQUET_FOLDER) && $(MAKE) clean
 	rm $(TARGET)
