start dev pause scene

--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -26,11 +26,13 @@ PLAYER=$(GAME_OBJECTS)/Player
 INSTRUCTIONS=$(GAME_OBJECTS)/Instructions
 INPUT=./Input
 SCENE=./Scene
+PAUSE=$(SCENE)/Pause
 
 #DEMO OBJECTS
 DEMO_OBJECTS_USED=Main.o Demo.o Test1.o Test1AnimationManager.o Test2.o \
 	Test2AnimationManager.o DemoSceneController.o Player.o Instructions.o \
-	DemoScene.o DemoSceneManager.o
+	DemoScene.o DemoSceneManager.o PauseScene.o
+
 DEMO_OBJECTS=$(patsubst %.o,$(OBJECT_FILES)/%.o, $(DEMO_OBJECTS_USED))
 
 
@@ -40,7 +42,7 @@ OBJECTS=$(PAT_OBJECTS) $(DEMO_OBJECTS)
 #INCLUDE FOR OBJECTS
 I_MAIN=-I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_MATH) -I$(PTA_UTILS) \
 	-I$(PTA_GAME) -I$(GAME) -I$(PTA_GAME_OBJECTS) -I$(PTA_SCENE) \
-	-I$(SCENE)
+	-I$(SCENE) -I$(PAUSE)
 
 I_GAME=-I$(PTA_GAME) -I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(INPUT) \
 	-I$(PTA_UTILS) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(TEST1) \
@@ -54,13 +56,16 @@ I_TEST2=-I$(TEST2) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS) \
 I_PLAYER=-I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 
 I_CONTROLLER=-I$(PTA_INPUT) -I$(INPUT) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) \
-	-I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PLAYER)
+	-I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PLAYER) -I$(PTA_SCENE) \
+	-I$(SCENE) -I$(PAUSE)
 
 I_INSTRUCTIONS=-I$(PTA_GAME_OBJECTS)
 
 I_SCENE=-I$(PTA_SCENE) -I$(SCENE) -I$(PTA_INPUT) -I$(INPUT) \
 	-I$(PTA_GAME_OBJECTS) -I$(PLAYER) -I$(TEST1) -I$(TEST2) \
 	-I$(INSTRUCTIONS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
+
+I_P_SCENE=-I$(PTA_SCENE)
 
 I_SCENE_MANAGER=-I$(SCENE) -I$(PTA_SCENE) -I$(PTA_INPUT) -I$(PTA_UTILS) \
 	-I$(PTA_GAME_OBJECTS) -I$(INPUT) -I$(PLAYER) -I$(PTA_MATH) \
@@ -116,6 +121,9 @@ $(OBJECT_FILES)/DemoScene.o: $(SCENE)/DemoScene.cpp $(SCENE)/DemoScene.h
 $(OBJECT_FILES)/DemoSceneManager.o: $(SCENE)/DemoSceneManager.cpp \
 	$(SCENE)/DemoSceneManager.h
 	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_SCENE_MANAGER) $< -o $@
+
+$(OBJECT_FILES)/PauseScene.o: $(PAUSE)/PauseScene.cpp $(PAUSE)/PauseScene.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_SCENE) $< -o $@
 
 
 .PHONY: clean c_all c_pa_amb_tomaquet pa_amb_tomaquet
