--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -31,7 +31,8 @@ PAUSE=$(SCENE)/Pause
 #DEMO OBJECTS
 DEMO_OBJECTS_USED=Main.o Demo.o Test1.o Test1AnimationManager.o Test2.o \
 	Test2AnimationManager.o DemoSceneController.o Player.o Instructions.o \
-	DemoScene.o DemoSceneManager.o PauseScene.o PauseController.o
+	DemoScene.o DemoSceneManager.o PauseScene.o PauseController.o \
+	PauseText.o
 
 DEMO_OBJECTS=$(patsubst %.o,$(OBJECT_FILES)/%.o, $(DEMO_OBJECTS_USED))
 
@@ -65,19 +66,22 @@ I_SCENE=-I$(PTA_SCENE) -I$(SCENE) -I$(PTA_INPUT) -I$(INPUT) \
 	-I$(PTA_GAME_OBJECTS) -I$(PLAYER) -I$(TEST1) -I$(TEST2) \
 	-I$(INSTRUCTIONS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
 
-I_P_SCENE=-I$(PTA_SCENE) -I$(PTA_INPUT) -I$(INPUT)
-
 I_SCENE_MANAGER=-I$(SCENE) -I$(PTA_SCENE) -I$(PTA_INPUT) -I$(PTA_UTILS) \
 	-I$(PTA_GAME_OBJECTS) -I$(INPUT) -I$(PLAYER) -I$(PTA_MATH) \
 	-I$(PTA_GRAPHICS)
 
+I_P_SCENE=-I$(PTA_SCENE) -I$(PTA_INPUT) -I$(INPUT) -I$(PTA_UTILS) \
+	-I$(PTA_GAME_OBJECTS) -I$(PAUSE)
+
 I_P_CONTROLLER=-I$(PTA_INPUT)
+
+I_P_TEXT=-I$(PTA_GAME_OBJECTS)
 
 TARGET=PA_AMB_TOMAQUET_DEMO.out
 
 CC=g++
 COMPILER_FLAGS=-Wall -c -g
-LINKER_FLAGS=-lSDL2 -lSDL2_image
+LINKER_FLAGS=-lSDL2 -lSDL2_image `sdl2-config --cflags`  -lSDL2_ttf
 
 
 
@@ -130,6 +134,9 @@ $(OBJECT_FILES)/PauseScene.o: $(PAUSE)/PauseScene.cpp $(PAUSE)/PauseScene.h
 $(OBJECT_FILES)/PauseController.o: $(INPUT)/PauseController.cpp \
 	$(INPUT)/PauseController.h
 	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_CONTROLLER) $< -o $@
+
+$(OBJECT_FILES)/PauseText.o: $(PAUSE)/PauseText.cpp $(PAUSE)/PauseText.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_TEXT) $< -o $@
 
 
 
