--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -1,10 +1,12 @@
 #DEMO MAKE FILE
 PA_AMB_TOMAQUET_FOLDER=..
 PAT_OBJECT_DIRECTORY=$(PA_AMB_TOMAQUET_FOLDER)/FileObjects
-PAT_OBJECTS_USED=Screen.o AnimatedStaticObject.o AnimatedKineticObject.o AnimationManager.o Controller.o Vector2D.o GraphicStaticObject.o Scene.o
+PAT_OBJECTS_USED=Screen.o AnimatedStaticObject.o AnimatedKineticObject.o \
+	AnimationManager.o Controller.o Vector2D.o GraphicStaticObject.o \
+	PAT_Scene.o PAT_SceneManager.o PAT_Game.o
+
 PAT_OBJECTS=$(patsubst %.o,$(PAT_OBJECT_DIRECTORY)/%.o, $(PAT_OBJECTS_USED))
 
-#PA AMB TOMÀTEQT FOLDERS PTA_GRAPHICS=$(PA_AMB_TOMAQUET_FOLDER)/Graphics
 PTA_INPUT=$(PA_AMB_TOMAQUET_FOLDER)/Input
 PTA_MATH=$(PA_AMB_TOMAQUET_FOLDER)/Math
 PTA_UTILS=$(PA_AMB_TOMAQUET_FOLDER)/Utils
@@ -24,9 +26,14 @@ PLAYER=$(GAME_OBJECTS)/Player
 INSTRUCTIONS=$(GAME_OBJECTS)/Instructions
 INPUT=./Input
 SCENE=./Scene
+PAUSE=$(SCENE)/Pause
 
 #DEMO OBJECTS
-DEMO_OBJECTS_USED=Main.o Game.o Test1.o Test1AnimationManager.o Test2.o Test2AnimationManager.o DemoSceneController.o Player.o Instructions.o DemoScene.o
+DEMO_OBJECTS_USED=Main.o Demo.o Test1.o Test1AnimationManager.o Test2.o \
+	Test2AnimationManager.o DemoSceneController.o Player.o Instructions.o \
+	DemoScene.o DemoSceneManager.o PauseScene.o PauseController.o \
+	PauseText.o
+
 DEMO_OBJECTS=$(patsubst %.o,$(OBJECT_FILES)/%.o, $(DEMO_OBJECTS_USED))
 
 
@@ -34,20 +41,47 @@ OBJECTS=$(PAT_OBJECTS) $(DEMO_OBJECTS)
 
 
 #INCLUDE FOR OBJECTS
-I_MAIN=-I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_MATH) -I$(PTA_UTILS) -I$(PTA_GAME) -I$(PTA_GAME_OBJECTS) -I$(PTA_SCENE) -I$(SCENE)
-I_GAME=-I$(PTA_GAME) -I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(INPUT) -I$(PTA_UTILS) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(TEST1)  -I$(TEST2) -I$(PLAYER) -I$(INSTRUCTIONS) -I$(PTA_SCENE) -I$(SCENE)
+I_MAIN=-I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(PTA_MATH) -I$(PTA_UTILS) \
+	-I$(PTA_GAME) -I$(GAME) -I$(PTA_GAME_OBJECTS) -I$(PTA_SCENE) \
+	-I$(SCENE) -I$(PAUSE)
+
+I_GAME=-I$(PTA_GAME) -I$(PTA_GRAPHICS) -I$(PTA_INPUT) -I$(INPUT) \
+	-I$(PTA_UTILS) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(TEST1) \
+	-I$(TEST2) -I$(PLAYER) -I$(INSTRUCTIONS) -I$(PTA_SCENE) -I$(SCENE)
+
 I_TEST1=-I$(TEST1) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
-I_TEST2=-I$(TEST2) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PTA_MATH)
+
+I_TEST2=-I$(TEST2) -I$(PTA_GAME_OBJECTS) -I$(PTA_GRAPHICS) -I$(PTA_UTILS) \
+	-I$(PTA_MATH)
+
 I_PLAYER=-I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
-I_CONTROLLER=-I$(PTA_INPUT) -I$(INPUT) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PLAYER)
+
+I_CONTROLLER=-I$(PTA_INPUT) -I$(INPUT) -I$(PTA_GAME_OBJECTS) -I$(PTA_MATH) \
+	-I$(PTA_GRAPHICS) -I$(PTA_UTILS) -I$(PLAYER) -I$(PTA_SCENE) \
+	-I$(SCENE) -I$(PAUSE)
+
 I_INSTRUCTIONS=-I$(PTA_GAME_OBJECTS)
-I_SCENE=-I$(PTA_SCENE) -I$(SCENE) -I$(PTA_INPUT) -I$(INPUT) -I$(PTA_GAME_OBJECTS) -I$(PLAYER) -I$(TEST1) -I$(TEST2) -I$(INSTRUCTIONS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
+
+I_SCENE=-I$(PTA_SCENE) -I$(SCENE) -I$(PTA_INPUT) -I$(INPUT) \
+	-I$(PTA_GAME_OBJECTS) -I$(PLAYER) -I$(TEST1) -I$(TEST2) \
+	-I$(INSTRUCTIONS) -I$(PTA_MATH) -I$(PTA_GRAPHICS) -I$(PTA_UTILS)
+
+I_SCENE_MANAGER=-I$(SCENE) -I$(PTA_SCENE) -I$(PTA_INPUT) -I$(PTA_UTILS) \
+	-I$(PTA_GAME_OBJECTS) -I$(INPUT) -I$(PLAYER) -I$(PTA_MATH) \
+	-I$(PTA_GRAPHICS)
+
+I_P_SCENE=-I$(PTA_SCENE) -I$(PTA_INPUT) -I$(INPUT) -I$(PTA_UTILS) \
+	-I$(PTA_GAME_OBJECTS) -I$(PAUSE)
+
+I_P_CONTROLLER=-I$(PTA_INPUT)
+
+I_P_TEXT=-I$(PTA_GAME_OBJECTS)
 
 TARGET=PA_AMB_TOMAQUET_DEMO.out
 
 CC=g++
-COMPILER_FLAGS=-Wall -c -g -O0
-LINKER_FLAGS=-lSDL2 -lSDL2_image
+COMPILER_FLAGS=-Wall -c -g
+LINKER_FLAGS=-lSDL2 -lSDL2_image `sdl2-config --cflags`  -lSDL2_ttf
 
 
 
@@ -61,13 +95,14 @@ $(TARGET): $(DEMO_OBJECTS)
 $(OBJECT_FILES)/Main.o: $(MAIN)/Main.cpp
 	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_MAIN) $< -o $@
 
-$(OBJECT_FILES)/Game.o: $(GAME)/Demo.cpp
+$(OBJECT_FILES)/Demo.o: $(GAME)/Demo.cpp $(GAME)/Demo.h
 	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_GAME) $< -o $@
 
 $(OBJECT_FILES)/Test1.o: $(TEST1)/Test1.cpp $(TEST1)/Test1.h
 	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_TEST1) $< -o $@
 
-$(OBJECT_FILES)/Test1AnimationManager.o: $(TEST1)/Test1AnimationManager.cpp $(TEST1)/Test1AnimationManager.h
+$(OBJECT_FILES)/Test1AnimationManager.o: $(TEST1)/Test1AnimationManager.cpp \
+	$(TEST1)/Test1AnimationManager.h
 	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_TEST1) $< -o $@
 
 $(OBJECT_FILES)/Test2.o: $(TEST2)/Test2.cpp $(TEST2)/Test2.h
@@ -76,7 +111,8 @@ $(OBJECT_FILES)/Test2.o: $(TEST2)/Test2.cpp $(TEST2)/Test2.h
 $(OBJECT_FILES)/Test2AnimationManager.o: $(TEST2)/Test2AnimationManager.h
 	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_TEST2) -x c++ $< -o $@
 
-$(OBJECT_FILES)/DemoSceneController.o: $(INPUT)/DemoSceneController.cpp $(INPUT)/DemoSceneController.h
+$(OBJECT_FILES)/DemoSceneController.o: $(INPUT)/DemoSceneController.cpp \
+	$(INPUT)/DemoSceneController.h
 	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_CONTROLLER) $< -o $@
 
 $(OBJECT_FILES)/Player.o: $(PLAYER)/Player.cpp $(PLAYER)/Player.h
@@ -86,7 +122,21 @@ $(OBJECT_FILES)/Instructions.o: $(INSTRUCTIONS)/Instructions.h
 	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_INSTRUCTIONS) -x c++ $< -o $@
 
 $(OBJECT_FILES)/DemoScene.o: $(SCENE)/DemoScene.cpp $(SCENE)/DemoScene.h
-	 $(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_SCENE) $< -o $@
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_SCENE) $< -o $@
+
+$(OBJECT_FILES)/DemoSceneManager.o: $(SCENE)/DemoSceneManager.cpp \
+	$(SCENE)/DemoSceneManager.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_SCENE_MANAGER) $< -o $@
+
+$(OBJECT_FILES)/PauseScene.o: $(PAUSE)/PauseScene.cpp $(PAUSE)/PauseScene.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_SCENE) $< -o $@
+
+$(OBJECT_FILES)/PauseController.o: $(INPUT)/PauseController.cpp \
+	$(INPUT)/PauseController.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_CONTROLLER) $< -o $@
+
+$(OBJECT_FILES)/PauseText.o: $(PAUSE)/PauseText.cpp $(PAUSE)/PauseText.h
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(I_P_TEXT) $< -o $@
 
 
 
