--- a/makefile.dictionary
+++ b/makefile.dictionary
@@ -19,7 +19,7 @@
 PAT_GRAPHICS=$(PAT_FOLDER)/Graphics
 PAT_SCREEN_H=$(PAT_GRAPHICS)/Screen.h
 PAT_SCREEN_CPP=$(PAT_GRAPHICS)/Screen.cpp
-PAT_SCREEN=$(FILE_OBJECTS_FOLDER)/PAT_Screen.o
+PAT_SCREEN_O=$(FILE_OBJECTS_FOLDER)/PAT_Screen.o
 
 PAT_SPRITE_H=$(PAT_FOLDER)/Graphics/Sprite.h
 PAT_SPRITE_CPP=$(PAT_FOLDER)/Graphics/Sprite.cpp
@@ -40,43 +40,46 @@ PAT_STACK_H=$(PAT_UTILS)/Stack.h
 PAT_STACK=$(FILE_OBJECTS_FOLDER)/PAT_Stack.o
 
 #Math folder
-PAT_VECTOR2D_H=$(PAT_FOLDER)/Math/Vector2D.h
-PAT_VECTOR2D_CPP=$(PAT_FOLDER)/Math/Vector2D.cpp
-PAT_VECTOR2D=$(FILE_OBJECTS_FOLDER)/PAT_Vector2D.o
+PAT_MATH=$(PAT_FOLDER)/Math
+PAT_VECTOR2D_H=$(PAT_MATH)/Vector2D.h
+PAT_VECTOR2D_CPP=$(PAT_MATH)/Vector2D.cpp
+PAT_VECTOR2D_O=$(FILE_OBJECTS_FOLDER)/PAT_Vector2D.o
 
 #GameObjects folder
-PAT_GRAPHIC_OBJ_H=$(PAT_FOLDER)/GameObjects/GraphicObject.h
+PAT_GAME_OBJ=$(PAT_FOLDER)/GameObjects
+PAT_GRAPHIC_OBJ_H=$(PAT_GAME_OBJ)/GraphicObject.h
 PAT_GRAPHIC_O=$(FILE_OBJECTS_FOLDER)/PAT_GraphicO.o
 
-PAT_GRAPHIC_S_OBJ_H=$(PAT_FOLDER)/GameObjects/GraphicStaticObject.h
-PAT_GRAPHIC_S_OBJ_CPP=$(PAT_FOLDER)/GameObjects/GraphicStaticObject.cpp
+PAT_GRAPHIC_S_OBJ_H=$(PAT_GAME_OBJ)/GraphicStaticObject.h
+PAT_GRAPHIC_S_OBJ_CPP=$(PAT_GAME_OBJ)/GraphicStaticObject.cpp
 PAT_GRAPHIC_S_O=$(FILE_OBJECTS_FOLDER)/PAT_GraphicSO.o
 
-PAT_ANIMATED_S_OBJ_H=$(PAT_FOLDER)/GameObjects/AnimatedStaticObjec.h
-PAT_ANIMATED_S_OBJ_CPP=$(PAT_FOLDER)/GameObjects/AnimatedStaticObjec.cpp
+PAT_ANIMATED_S_OBJ_H=$(PAT_GAME_OBJ)/AnimatedStaticObjec.h
+PAT_ANIMATED_S_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedStaticObjec.cpp
 PAT_ANIMATED_S_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimatedSO.o
 
-PAT_ANIMATED_K_OBJ_H=$(PAT_FOLDER)/GameObjects/AnimatedKineticObjec.h
-PAT_ANIMATED_K_OBJ_CPP=$(PAT_FOLDER)/GameObjects/AnimatedKineticObjec.cpp
+PAT_ANIMATED_K_OBJ_H=$(PAT_GAME_OBJ)/AnimatedKineticObjec.h
+PAT_ANIMATED_K_OBJ_CPP=$(PAT_GAME_OBJ)/AnimatedKineticObjec.cpp
 PAT_ANIMATED_K_O=$(FILE_OBJECTS_FOLDER)/PAT_AnimatedKO.o
 
 #Graphic Folder
-PAT_SPRITE_H=$(PAT_FOLDER)/Graphics/Sprite.h
-PAT_SPRITE_CPP=$(PAT_FOLDER)/Graphics/Sprite.cpp
+PAT_GRAPHICS=$(PAT_FOLDER)/Graphics
+PAT_SPRITE_H=$(PAT_GRAPHICS)/Sprite.h
+PAT_SPRITE_CPP=$(PAT_GRAPHICS)/Sprite.cpp
 PAT_SPRITE=$(FILE_OBJECTS_FOLDER)/PAT_Sprite.cpp
 
-PAT_ANIMATION_M_H=$(PAT_FOLDER)/Graphics/AnimationManager.h
-PAT_ANIMATION_M_CPP=$(PAT_FOLDER)/Graphics/AnimationManager.cpp
+PAT_ANIMATION_M_H=$(PAT_GRAPHICS)/AnimationManager.h
+PAT_ANIMATION_M_CPP=$(PAT_GRAPHICS)/AnimationManager.cpp
 PAT_ANIMATION_M=$(FILE_OBJECTS_FOLDER)/PAT_AnimationM.cpp
 
 #Scene folder
 PAT_SCENE=$(PAT_FOLDER)/Scene
-PAT_SCENE_H=$(PAT_SCENE)/Scene.h
-PAT_SCENE_CPP=$(PAT_SCENE)/Scene.cpp
+PAT_SCENE_H=$(PAT_SCENE)/PAT_Scene.h
+#PAT_SCENE_CPP=$(PAT_SCENE)/Scene.cpp
 PAT_SCENE_O=$(FILE_OBJECTS_FOLDER)/PAT_Scene.o
 
-PAT_SCENE_M_H=$(PAT_SCENE)/SceneManager.h
-PAT_SCENE_M_CPP=$(PAT_SCENE)/SceneManager.cpp
+PAT_SCENE_M_H=$(PAT_SCENE)/PAT_SceneManager.h
+PAT_SCENE_M_CPP=$(PAT_SCENE)/PAT_SceneManager.cpp
 PAT_SCENE_M_O=$(FILE_OBJECTS_FOLDER)/PAT_SceneM.o
 
 #Game folder
